feat: Creation of documentation for anime routes, in addition to modifications to some routes
